# cultural-dispatch

./: .gitignore  dev.sh  publish.sh
.github/workflows/: deploy.yml
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: posts.py  upload.py
backend/app/models/: __init__.py  post.py
frontend/: astro.config.mjs  package-lock.json  package.json
frontend/public/data/: posts.json
frontend/public/data/posts/: a-day-between-world-press-photo-and-martin-parr-1782295999.json  a-note-on-simon.json  a-tribute-to-a-tribute.json  grimm-breaking-it-down.json  her-in-love-with-ai.json  masters-of-movement.json  mirrors-mischief-and-mozart.json  new-moves-in-a-new-age.json  something-new-in-tuindorp-oostzaan.json  sorry-baby.json  together-together-opening-night.json  viral-lyricist-sofia-isella.json
frontend/src/components/: Archive.tsx  EditorGate.tsx  EditorUnlock.tsx  ForeverDraftBadge.tsx  HomePage.tsx  Nav.tsx  PostDetail.tsx  PostEditLoader.tsx  PostEditor.tsx  PostList.tsx
frontend/src/content/: about.md
frontend/src/lib/: api.ts  base.ts  editor.ts  figureExtension.ts  imageFigureExtension.tsx  ledger.ts  readingTime.ts
frontend/src/pages/: about-claire.astro  about.astro  add.astro  archive.astro  edit.astro  index.astro  post.astro
frontend/src/pages/post/: [slug].astro
frontend/src/styles/: global.css
frontend/src/types/: post.ts
scripts/: dump_to_json.py
