[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "cultural-dispatch"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.21",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["."]
